# OptiGOBTimeSeries

./: .dockerignore  .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
configuration/: config.json  keys.py
data/: animals.xlsx  database.db  forestry.xlsx  static_systems.xlsx
moo/: nsga2.py  observer.py  optigob_problem.py  visualize_results.py
optigob/: optigob.py  utils.py
optigob/systems/: abstract_factory.py  ad_emissions.py  agriculture.py  cattle_agriculture.py  forestry.py  non_cattle_agriculture.py  organic_soils.py
pages/: 00_Home.py  01_Configuration.py  02_Evaluation.py  03_Scenario_Discovery.py  04_Scenario_Discovery_Evaluation.py  05_Data_Management.py
resource_manager/: create_database.py  database_manager.py
tests/: test_ad_emissions.py  test_area_balancing.py  test_cattle_agriculture.py  test_forestry.py  test_non_cattle_agriculture.py  test_organic_soils.py
